# supamigrate

./: .env  .env.example  .gitignore  .gitleaks.toml  Backup_Project_&_Storage.ipynb  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Migrate_Project_&_Storage.ipynb  README.md  backup_database.sh  deny.toml  requirements.txt  supamigrate.example.toml
.github/: dependabot.yml
.github/workflows/: main.yml  pipeline.yml
src/: cli.rs  config.rs  error.rs  main.rs
src/commands/: backup.rs  config.rs  doctor.rs  migrate.rs  mod.rs  restore.rs  storage.rs
src/db/: dump.rs  mod.rs  restore.rs  transform.rs
src/functions/: client.rs
src/storage/: client.rs  mod.rs  transfer.rs
