[package]
name = "supamigrate"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["Foodshare <hello@foodshare.club>"]
description = "A fast CLI tool for migrating and backing up Supabase projects - database, storage, and edge functions"
license = "Apache-2.0"
repository = "https://github.com/Foodshareclub/supamigrate"
homepage = "https://github.com/Foodshareclub/supamigrate"
documentation = "https://docs.rs/supamigrate"
keywords = ["supabase", "postgresql", "migration", "backup", "cli"]
categories = ["command-line-utilities", "database"]
readme = "README.md"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Async runtime
tokio = { version = "1.49", features = ["full"] }

# HTTP client for Supabase Storage API (rustls for cross-platform builds)
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "multipart", "rustls-tls"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging & progress
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
indicatif = "0.17"
console = "0.15"
atty = "0.2"

# Utilities
url = "2.5"
uuid = { version = "1.11", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3.14"
futures = "0.3"
flate2 = "1.1"
shellexpand = "3.1"
tokio-util = { version = "0.7", features = ["io"] }
bytes = "1.9"
tar = "0.4"

# Unix utilities (for root detection)
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
assert_cmd = "2.1"
predicates = "3.1"
wiremock = "0.5"
tokio-test = "0.4"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"

[[bin]]
name = "supamigrate"
path = "src/main.rs"
